# firecracker

./: CHANGELOG.md
api_server/src/: http_service.rs
devices/src/virtio/: mmio.rs  net.rs
logger/src/: lib.rs
src/api_server/src/: lib.rs
src/api_server/src/request/: actions.rs  boot_source.rs  drive.rs  instance_info.rs  logger.rs  machine_configuration.rs  net.rs
src/api_server/swagger/: firecracker.yaml
src/arch/: Cargo.toml
src/arch/src/: lib.rs
src/arch/src/aarch64/: fdt.rs  mod.rs
src/arch/src/x86_64/: mod.rs
src/devices/src/legacy/: i8042.rs  rtc_pl031.rs  serial.rs
src/devices/src/virtio/: block.rs  net.rs
src/devices/src/virtio/block/: event_handler.rs
src/dumbo/src/: ns.rs
src/dumbo/src/tcp/: endpoint.rs
src/firecracker/src/: api_server_adapter.rs  main.rs  metrics.rs
src/jailer/src/: env.rs  main.rs
src/kernel/src/loader/: mod.rs
src/logger/src/: error.rs  lib.rs  logger.rs  metrics.rs
src/micro_http/src/: request.rs
src/micro_http/src/common/: headers.rs
src/mmds/src/: lib.rs
src/polly/src/: event_manager.rs
src/utils/src/: arg_parser.rs  validators.rs
src/vmm/src/: builder.rs  controller.rs  error.rs  lib.rs  rpc_interface.rs  signal_handler.rs  vstate.rs
src/vmm/src/vmm_config/: instance_info.rs  logger.rs
tools/devctr/: Dockerfile.aarch64  Dockerfile.x86_64
vmm/src/: lib.rs
vmm/src/default_syscalls/: filters.rs  mod.rs  x86_64.rs
